# rtos-scheduler

./: Cargo.toml  README.md  Report.docx  aperiodic.txt  main.py  pyproject.toml  simulator.py  viewer.py
data/outputs1/EDFScheduler/: test2.json  test3.json  test5.json  test5.txt
data/outputs1/LSTScheduler/: test4.json  test4.txt  test5.txt  test6.json  test6.txt
data/outputs1/RMScheduler/: test1.txt  test3.txt  test6.json
models/: jobs.py
outputs/EDFScheduler/: test3.txt  test4.json  test4.txt  test6.json  test6.txt
outputs/LSTScheduler/: test1.json  test3.json  test3.txt  test5.json
outputs/RMScheduler/: test2.txt  test3.json  test4.json  test4.txt  test5.json  test5.txt  test6.txt
outputs/word/: CUS.txt  TBS.txt
outputs/簡單1/: CUS.txt  TBS.txt
outputs/複雜0.8/: CUS.txt  TBS.txt
outputs/複雜0.9/: CUS.txt  TBS.txt
schedulers/: __init__.py  cus_scheduler.py  scheduler.py  tbs_scheduler.py
src/: main.rs  utils.rs
src/scheduler/: edf_scheduler.rs  lst_scheduler.rs  mod.rs  rm_scheduler.rs  scheduler.rs
src/structs/: job.rs  mod.rs  task.rs  tick_info.rs
utils/: file_reader.py
