[project]
name = "RTS-Project2"
version = "0.1.0"
description = ""
requires-python = "==3.10.15"
dependencies = [
    "numpy",
    "logging",
    "pydantic",
    "colorama",
    "matplotlib>=3.10.0",
]


[project.optional-dependencies]
dev = ["ruff"]


[tool.ruff]
line-length = 128
indent-width = 4

[tool.ruff.lint]
select = ["ALL", "D201", "D205", "D206", "D207"]
ignore = [
    "D",
    "ANN003",
    "RUF022",
    "RUF002",
    "RUF003",
    "G004",
    "B006",
    "ERA001",
    "FBT001",
    "FBT002",
    "PLR0913",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = "dynamic"
